# EAi

./: test.py
Web/: index.html  package-lock.json  package.json
Web/src/: main.jsx
backend/: app.py  emails.db  emails.db-journal  outprioAPI.spec  requirements.txt
backend/logs/: backend.log.2025-07-09  backend.log.2025-07-10  backend.log.2025-07-11  backend.log.2025-07-12  backend.log.2025-07-13  backend.log.2025-07-16  backend.log.2025-07-17
frontend/: index.html  package-lock.json  package.json  postcss.config.js  tailwind.config.js  vite.config.mjs  vite.config.tauri.mjs
frontend/src/: App.jsx  MainApp.jsx  SetupWizard.jsx  index.css  main.jsx
frontend/src-tauri/: 2  Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/src/: main.rs
frontend/src/context/: AuthContext.jsx
frontend/src/screens/: LicenseGate.jsx  Login.jsx
frontend/src/utils/: supabaseClient.js
web_backend/: .env  main.py  render.yaml  requirements.txt
web_frontend/: index.html  package-lock.json  package.json  postcss.config.js  tailwind.config.js
web_frontend/public/downloads/: OutPrio_1.0.0_x64-setup.exe.sig  latest.json
web_frontend/src/: App.jsx  index.css  index.js  main.jsx  supabaseClient.js
web_frontend/src/pages/: Auth.jsx  Dashboard.jsx  ResetPassword.jsx
